Reformat + add integration to Github